# cmake-multi-install

./: CMakeLists.txt  README.md
demo1/: CMakeLists.txt  manifest.txt.in
demo1/src/: demo1.c
demo1/src/mo/: Window.h  common.h
demo2/: CMakeLists.txt
demo2/src/mo2/: Marker.h
src/: main.c
